--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
   </head>
   <nav>
         <a href="Index.html">Index</a> |
-        <a href="About.html">About Me</a> |
+        <a href="About.html">Wahby</a> |
 
       </nav>
-      <link rel="Stylesheet" href="Stylesheet.css">
 
 
 <p>Projects that I completed</p>
@@ -28,8 +27,8 @@
 
   <p>Here we can find a detailed describtion of my projects:<p>
 
-    <p><b>Miniature Impedance Spectrometer:</b><p>
-
+    <h1>Miniature Impedance Spectrometer:</h1>
+  <section>
   <p>Designed as part of team, a low cost, low frequency, high impedance, and portable spectrometer to analyze milk powder<p>
   <p>Created and tested multiple functions in excel to produce Bode, Sinewave, and lissajous patterns plots to analyze spectrometer data<p>
     <figure>
@@ -37,13 +36,12 @@
       <figcaption>Fig.1 - Persepolis-Poster</figcaption>
     </figure>
 
-  <p><b>Travel planning:</b><p>
-
+  <h2>Travel planning:</h2>
   <p>I designed a web page with all the locations that I want to visit and what I want to do after we are over the pandemic.<p>
 
 
 
-   <a  class="important red-text" href="Code.html">You can see my project here</a>
+   <a href="file:///C:/Users/Wahby%20Alqadhi/Desktop/Assignment%201/Code.html"> You can see my project here</a>
 
     <figure>
       <img src="https://cdn.britannica.com/69/156369-050-75E7FD08/skyline-Dubai-United-Arab-Emirates.jpg" alt="Dubai" style="width:50%">
@@ -64,6 +62,7 @@
 
 
 
+</section>
 
 <footer>
 
